--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
-
 warehouse.address = http://localhost:8080
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
+spring.datasource.url=jdbc:h2:mem:testBd
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=sa
+spring.liquibase.change-log=db/changelog/changelog.xml
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=none
